| Bug #21143 | Reorganizing of subpartitions let mysqld hang. | ||
|---|---|---|---|
| Submitted: | 19 Jul 2006 10:09 | Modified: | 2 Sep 2006 4:35 |
| Reporter: | Horst Hunger | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Partitions | Severity: | S1 (Critical) |
| Version: | 5.1.12-Beta (06.07.19) | OS: | Linux (Linux, Suse 10.1) |
| Assigned to: | Mikael Ronström | CPU Architecture: | Any |
[19 Jul 2006 10:09]
Horst Hunger
[19 Jul 2006 11:48]
Horst Hunger
How to execute the attached program (test-21143.test): perl mysql-test-run.pl --skip-ndb --suite experiments test-21143
[19 Jul 2006 12:31]
Horst Hunger
To repeat the hangigng mysqld use "cre-alter-21143.sql" with mysql. Change the directories if necessary to those you want.
[16 Aug 2006 11:55]
Mikael Ronström
Reviewed by gluh
[31 Aug 2006 20:37]
Mikael Ronström
fixed in 5.1-kt tree
[31 Aug 2006 20:40]
Mikael Ronström
fixed in 5.1-kt team tree
[1 Sep 2006 7:52]
Mikael Ronström
Patch will appear in 5.1.12
[2 Sep 2006 4:35]
Jon Stephens
Documented bugfix in 5.1.12 changelog.
