BUG#21143: mysqld hangs when using wrong number of subpartitions Rewrote if-statement a bit shorter Added check for subpartitions in REORGANIZE partitions to be of same number as in base table.